# video-to-ascii

./: .gitignore  LICENSE  README.md  ascii.py  ascii_convert.py  ascii_html.py  audio.py  colours.py  controls.py  errors.py  intro.py  live_render.py  pyproject.toml  requirements.txt  run_tests.py  video_render.py  youtubedl_saver.py
tests/: test_audio_controls.py  test_core.py  test_fixes.py  test_renderers.py
