[project]
name = "video-to-ascii"
version = "1.1.0"
description = "A Python generator that converts YouTube videos or local video files to coloured ASCII art in your terminal."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cursor>=1.3.5",
    "mss>=10.2.0",
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "pynput>=1.8.2",
    "questionary>=2.1.1",
    "sty>=1.0.6",
    "yt-dlp>=2026.7.4",
]
